@@ -485,6 +485,51 @@ test exec-13.3 {setting errorCode variable} {exec} {
 	    [string tolower [lrange $errorCode 2 end]]
 } {1 {couldn't execute "_weird_cmd_": no such file or directory} POSIX {{no such file or directory}}}
 
+test exec-13.4 {extended exit result codes} {
+    -constraints {win}
+    -setup {
+        set tmp [makeFile {exit 0x00000101} tmpfile.exec-13.4]
+    }
+    -body {
+        list [catch {exec [interpreter] $tmp} err]\
+            [lreplace $::errorCode 1 1 {}]
+    }
+    -cleanup {
+        removeFile $tmp
+    }
+    -result {1 {CHILDSTATUS {} 257}}
+}
+
+test exec-13.5 {extended exit result codes: max value} {
+    -constraints {win}
+    -setup {
+        set tmp [makeFile {exit 0x3fffffff} tmpfile.exec-13.5]
+    }
+    -body {
+        list [catch {exec [interpreter] $tmp} err]\
+            [lreplace $::errorCode 1 1 {}]
+    }
+    -cleanup {
+        removeFile $tmp
+    }
+    -result {1 {CHILDSTATUS {} 1073741823}}
+}
+
+test exec-13.6 {extended exit result codes: signalled} {   
+    -constraints {win}
+    -setup {
+        set tmp [makeFile {exit 0xC0000016} tmpfile.exec-13.6]
+    }
+    -body {
+        list [catch {exec [interpreter] $tmp} err]\
+            [lreplace $::errorCode 1 1 {}]
+    }
+    -cleanup {
+        removeFile $tmp
+    }
+    -result {1 {CHILDKILLED {} SIGABRT SIGABRT}}
+}
+
 # Switches before the first argument
 
 test exec-14.1 {-keepnewline switch} {exec} {
